--- a/MOVIE FOLDER/Hollywood_Action.html
+++ b/MOVIE FOLDER/Hollywood_Action.html
@@ -21,60 +21,60 @@
                     <li><big>Action</big>
                         <div class="sub1">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Action.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Action.html">Bollywood</a></li>
+                                <li><a href="South_Action.html">South</a></li>
+                                <li><a href="Odia_Action.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Romance</big>
                         <div class="sub2">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Romance.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Romance.html">Bollywood</a></li>
+                                <li><a href="South_Romance.html">South</a></li>
+                                <li><a href="Odia_Romance.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Horror</big>
                         <div class="sub3">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Horror.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Horror.html">Bollywood</a></li>
+                                <li><a href="South_Horror.html">South</a></li>
+                                <li><a href="Odia_Horror.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Comedy</big>
                         <div class="sub4">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_comedy.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Comedy.html">Bollywood</a></li>
+                                <li><a href="South_comedy.html">South</a></li>
+                                <li><a href="Odia_comedy.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Thriller</big>
                         <div class="sub5">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Thriller.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Thriller.html">Bollywood</a></li>
+                                <li><a href="South_Thriller.html">South</a></li>
+                                <li><a href="Odia_Thriller.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Mystery</big>
                         <div class="sub6">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Mystery.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Mystery.html">Bollywood</a></li>
+                                <li><a href="South_Mystery.html">South</a></li>
+                                <li><a href="Odia_Mystery.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
@@ -85,30 +85,44 @@
 
     <main>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Furiosa_ A Mad Max Saga.jpeg" alt="Furiosa: A Mad Max Saga"></a><br><br><center><b>Furiosa: A Mad Max Saga (2024)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="Image/Deadpool & Wolverine.jpeg" alt="Deadpool & Wolverine"></a><br><br><center><b>Deadpool & Wolverine (2024)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="Image/Beverly Hills Cop_ Axel F.jpeg" alt="Beverly Hills Cop: Axel F"></a><br><br><center><b>Beverly Hills Cop: Axel F (2024)</b></center></div>
+            <div id="id4" class="box"><a href=""><img src="Image/Gladiator.jpeg" alt="Gladiator"></a><br><br><center><b>Gladiator (2000)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Bad Boys_Ride or Die.jpeg" alt="Bad Boys: Ride or Die"></a><br><br><center><b>Bad Boys: Ride or Die (2024)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="Image/The Beekeeper.jpeg" alt="The Beekeeper"></a><br><br><center><b>The Beekeeper (2024)</b></center></div>
         </div>
 
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Trigger Warning.jpeg" alt="Trigger Warning"></a><br><br><center><b>Trigger Warning (2024)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="Image/civil war.jpeg" alt="Civil War"></a><br><br><center><b>Civil War (2024)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="Image/Godzilla x Kong_ The New Empire.jpeg" alt="Godzilla x Kong: The New Empire"></a><br><br><center><b>Godzilla x Kong: The New Empire (2024)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="Image/Mad Max_Fury Road.jpeg" alt="Mad Max: Fury Road"></a><br><br><center><b>Mad Max: Fury Road (2015)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Monkey Man.jpeg" alt="Monkey Man"></a><br><br><center><b>Monkey Man (2024)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="Image/Bullet Train.jpeg" alt="Bullet Train"></a><br><br><center><b>Bullet Train (2022)</b></center></div>
         </div>
 
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Godzilla Minus One.jpeg" alt="Godzilla Minus One"></a><br><br><center><b>Godzilla Minus One (2023)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="Image/Kingdom of the Planet of the Apes.jpeg" alt="Kingdom of the Planet of the Apes"></a><br><br><center><b>Kingdom of the Planet of the Apes (2024)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="Image/The Ministry of Ungentlemanly Warfare.jpeg" alt="The Ministry of Ungentlemanly Warfare"></a><br><br><center><b>The Ministry of Ungentlemanly Warfare (2024)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="Image/Argylle.jpeg" alt="Argylle"></a><br><br><center><b>Argylle (2024)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Captain America_Brave New World.jpeg" alt="Captain America: Brave New World"></a><br><br><center><b>Captain America: Brave New World (2024)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="Image/Godzilla vs. Kong.jpeg" alt="Godzilla vs. Kong"></a><br><br><center><b>Godzilla vs. Kong (2021)</b></center></div>
         </div>
     </main>
 </body>
