--- a/MOVIE FOLDER/Movie_Project.html
+++ b/MOVIE FOLDER/Movie_Project.html
@@ -211,44 +211,18 @@
 
 
         <h3>Upcoming Movies</h3>
-        <h4><button>Bollywood Movies</button></h4>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-        </div>
-        
-        <h4><button>Hollywood Movies</button></h4>
-        <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-        </div>
+            <div id="id1" class="box"><a href=""><img src="Image/Jigra.jpeg" alt="jigra"></a><br><br><center><b>Jigra (2024)</b></center></div>
 
-        <h4><button>South Movies</button></h4>
-        <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-        </div>
+            <div id="id2" class="box"><a href=""><img src="Image/singham_again.jpg" alt="Singham Again"></a><br><br><center><b>Singham Again (2024)</b></center></div>
 
-        <h4><button>Odia Movies</button></h4>
-        <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id3" class="box"><a href=""><img src="Image/The Twisters.jpeg" alt="The Twisters"></a><br><br><center><b>The Twisters (2024)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="Image/Disciples in the Moonlight.jpeg" alt="Disciples in the Moonlight"></a><br><br><center><b>Disciples in the Moonlight (2024)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Garuda Chapter 1.jpeg" alt="Garuda Chapter 1"></a><br><br><center><b>Garuda Chapter 1(2024)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="Image/The Girlfriend.webp" alt="The Girlfriend"></a><br><br><center><b>The Girlfriend (2024)</b></center></div>
         </div>
     </main>
 </body>
