--- a/MOVIE FOLDER/Odia_Action.html
+++ b/MOVIE FOLDER/Odia_Action.html
@@ -15,66 +15,66 @@
             </div>
 
             <!-- Category -->
-             <div class="Nav-bar">
+            <div class="Nav-bar">
                 <ul>
                     <li><big><a href="Movie_Project.html" id="search">Home</a></big></li>
                     <li><big>Action</big>
                         <div class="sub1">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Action.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Action.html">Bollywood</a></li>
+                                <li><a href="South_Action.html">South</a></li>
+                                <li><a href="Odia_Action.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Romance</big>
                         <div class="sub2">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Romance.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Romance.html">Bollywood</a></li>
+                                <li><a href="South_Romance.html">South</a></li>
+                                <li><a href="Odia_Romance.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Horror</big>
                         <div class="sub3">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Horror.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Horror.html">Bollywood</a></li>
+                                <li><a href="South_Horror.html">South</a></li>
+                                <li><a href="Odia_Horror.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Comedy</big>
                         <div class="sub4">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_comedy.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Comedy.html">Bollywood</a></li>
+                                <li><a href="South_comedy.html">South</a></li>
+                                <li><a href="Odia_comedy.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Thriller</big>
                         <div class="sub5">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Thriller.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Thriller.html">Bollywood</a></li>
+                                <li><a href="South_Thriller.html">South</a></li>
+                                <li><a href="Odia_Thriller.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Mystery</big>
                         <div class="sub6">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Mystery.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Mystery.html">Bollywood</a></li>
+                                <li><a href="South_Mystery.html">South</a></li>
+                                <li><a href="Odia_Mystery.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
@@ -85,48 +85,31 @@
 
     <main>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Malyagiri.jpeg" alt="Malyagiri"></a><br><br><center><b>Malyagiri (2023)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="Image/Jaga Hatare Pagha.jpeg" alt="Jaga Hatare Pagha"></a><br><br><center><b>Jaga Hatare Pagha (2015)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="Image/Bidyarana.jpeg" alt="Bidyarana"></a><br><br><center><b>Bidyarana (2022)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="Image/Agastya.jpeg" alt="Agastya"></a><br><br><center><b>Agastya (2016)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Abhaya.jpeg" alt="Abhaya"></a><br><br><center><b>Abhaya (2017)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="Image/Daha Balunga.jpeg" alt="Daha Balunga"></a><br><br><center><b>Daha Balunga (2013)</b></center></div>
         </div>
 
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-        </div>
+            <div id="id1" class="box"><a href=""><img src="Image/Prasthanam.jpeg" alt="Prasthanam"></a><br><br><center><b>Prasthanam (2022)</b></center></div>
 
-        <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-        </div>
+            <div id="id2" class="box"><a href=""><img src="Image/Babu Bhaijaan.jpeg" alt="Babu Bhaijaan"></a><br><br><center><b>Babu Bhaijaan (2021)</b></center></div>
 
-        <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-        </div>
+            <div id="id3" class="box"><a href=""><img src="Image/Pratikshya.jpeg" alt="Pratikshya"></a><br><br><center><b>Pratikshya (2022)</b></center></div>
 
-        <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id4" class="box"><a href=""><img src="Image/Daman.jpeg" alt="Daman"></a><br><br><center><b>Daman (2022)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Gajapati.jpeg" alt="Gajapati"></a><br><br><center><b>Gajapati (2023)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="Image/Delivery Boy.jpeg" alt="Delivery Boy"></a><br><br><center><b>Delivery Boy (2022)</b></center></div>
         </div>
     </main>
 </body>
