--- a/MOVIE FOLDER/South_Action.html
+++ b/MOVIE FOLDER/South_Action.html
@@ -15,66 +15,66 @@
             </div>
 
             <!-- Category -->
-             <div class="Nav-bar">
+            <div class="Nav-bar">
                 <ul>
                     <li><big><a href="Movie_Project.html" id="search">Home</a></big></li>
                     <li><big>Action</big>
                         <div class="sub1">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Action.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Action.html">Bollywood</a></li>
+                                <li><a href="South_Action.html">South</a></li>
+                                <li><a href="Odia_Action.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Romance</big>
                         <div class="sub2">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Romance.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Romance.html">Bollywood</a></li>
+                                <li><a href="South_Romance.html">South</a></li>
+                                <li><a href="Odia_Romance.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Horror</big>
                         <div class="sub3">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Horror.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Horror.html">Bollywood</a></li>
+                                <li><a href="South_Horror.html">South</a></li>
+                                <li><a href="Odia_Horror.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Comedy</big>
                         <div class="sub4">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_comedy.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Comedy.html">Bollywood</a></li>
+                                <li><a href="South_comedy.html">South</a></li>
+                                <li><a href="Odia_comedy.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Thriller</big>
                         <div class="sub5">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Thriller.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Thriller.html">Bollywood</a></li>
+                                <li><a href="South_Thriller.html">South</a></li>
+                                <li><a href="Odia_Thriller.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Mystery</big>
                         <div class="sub6">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Mystery.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Mystery.html">Bollywood</a></li>
+                                <li><a href="South_Mystery.html">South</a></li>
+                                <li><a href="Odia_Mystery.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
@@ -85,49 +85,33 @@
 
     <main>
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Salaar.jpeg" alt="Salaar"></a><br><br><center><b>Salaar (2023)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="Image/Pushpa_ The Rise-Part 1.jpeg" alt="Pushpa: The Rise-Part 1"></a><br><br><center><b>Pushpa: The Rise-Part 1 (2021)</b></center></div>
+            <div id="id3" class="box"><a href=""><img src="Image/Maharaja.jpeg" alt="Maharaja"></a><br><br><center><b>Maharaja (2024)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="Image/Kill.jpeg" alt="Kill"></a><br><br><center><b>Kill (2023)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Saindhav.jpeg" alt="Saindhav"></a><br><br><center><b>Saindhav (2024)</b></center></div>
+
+            <div id="id6" class="box"><a href=""><img src="Image/K.G.F_Chapter 1.jpeg" alt="K.G.F: Chapter 1"></a><br><br><center><b>K.G.F: Chapter 1 (2018)</b></center></div>
         </div>
 
         <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
+            <div id="id1" class="box"><a href=""><img src="Image/Vikram.jpeg" alt="Vikram"></a><br><br><center><b>Vikram (2022)</b></center></div>
+
+            <div id="id2" class="box"><a href=""><img src="Image/Beast.jpeg" alt="Beast"></a><br><br><center><b>Beast (2022)</b></center></div>
+
+            <div id="id3" class="box"><a href=""><img src="Image/RRR.jpeg" alt="RRR"></a><br><br><center><b>RRR (2022)</b></center></div>
+
+            <div id="id4" class="box"><a href=""><img src="Image/Leo.jpeg" alt="Leo"></a><br><br><center><b>Leo (2023)</b></center></div>
+
+            <div id="id5" class="box"><a href=""><img src="Image/Major.jpeg" alt="Major"></a><br><br><center><b>Major (2022)</b></center></div>
+            
+            <div id="id6" class="box"><a href=""><img src="Image/K.G.F Chapter 2.jpg" alt="K.G.F Chapter 2"></a><br><br><center><b>K.G.F Chapter 2 (2022)</b></center></div>
         </div>
 
-        <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-        </div>
-
-        <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-        </div>
-
-        <div class="container1">
-            <div id="id1" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id2" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id3" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id4" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id5" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-            <div id="id6" class="box"><a href=""><img src="" alt=""></a><br><br><center><b></b></center></div>
-        </div>
+        
     </main>
 </body>
 </html>
