--- a/MOVIE FOLDER/Hollywood_comedy.html
+++ b/MOVIE FOLDER/Hollywood_comedy.html
@@ -15,66 +15,66 @@
             </div>
 
             <!-- Category -->
-             <div class="Nav-bar">
+            <div class="Nav-bar">
                 <ul>
                     <li><big><a href="Movie_Project.html" id="search">Home</a></big></li>
                     <li><big>Action</big>
                         <div class="sub1">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Action.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Action.html">Bollywood</a></li>
+                                <li><a href="South_Action.html">South</a></li>
+                                <li><a href="Odia_Action.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Romance</big>
                         <div class="sub2">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Romance.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Romance.html">Bollywood</a></li>
+                                <li><a href="South_Romance.html">South</a></li>
+                                <li><a href="Odia_Romance.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Horror</big>
                         <div class="sub3">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Horror.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Horror.html">Bollywood</a></li>
+                                <li><a href="South_Horror.html">South</a></li>
+                                <li><a href="Odia_Horror.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Comedy</big>
                         <div class="sub4">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_comedy.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Comedy.html">Bollywood</a></li>
+                                <li><a href="South_comedy.html">South</a></li>
+                                <li><a href="Odia_comedy.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Thriller</big>
                         <div class="sub5">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Thriller.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Thriller.html">Bollywood</a></li>
+                                <li><a href="South_Thriller.html">South</a></li>
+                                <li><a href="Odia_Thriller.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><big>Mystery</big>
                         <div class="sub6">
                             <ul>
-                                <li><a href="#">Hollywood</a></li>
-                                <li><a href="#">Bollywood</a></li>
-                                <li><a href="#">South</a></li>
-                                <li><a href="#">Odia</a></li>
+                                <li><a href="Hollywood_Mystery.html">Hollywood</a></li>
+                                <li><a href="Bollywood_Mystery.html">Bollywood</a></li>
+                                <li><a href="South_Mystery.html">South</a></li>
+                                <li><a href="Odia_Mystery.html">Odia</a></li>
                             </ul>
                         </div>
                     </li>
